docs(Java): 优化 Java基础 面试题结构，补全常见追问与高频考点
- P0: 删除第七/八章重复内容，6个增量小节合并至正式章节

- P1: 修复追问地图锚点链接（不可变类/组合vs继承）

- P2: 为17个浅小节补常见追问（值传递/static/反射/Stream/CF等）

- P3: 新增4个高频考点（Object/final/重载重写/try-with-resources）

- P4: 补全18个节的频次元数据行

- CLAUDE.md: 常用命令分组+改什么跑什么速查表+工作流拆bullet+去重

- 知识点索引: gen_index.py 自动刷新

AI-Generated-By: Claude Code unknown / aliyun/deepseek-v4-pro